Clean up unit tests
- use the unified test reference folder
- fix some sonar lint issues

Issue-ID: POLICY-3945
Change-Id: I33e30332d911f02c32937316bac6d2d331ac6346
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>